# bigpose_ros

./: .gitignore  README.md
bigpose_msgs/: CMakeLists.txt  package.xml
bigpose_msgs/srv/: GetPose.srv  GetTransformStamped.srv
bigpose_ros/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
bigpose_ros/bigpose_ros/: bigpose_node.py  bigpose_ros_parameters.yaml  detector.py  icp_utils.py  megapose_utils.py  render_utils.py  s2m2_utils.py
bigpose_ros/config/: params.yaml
bigpose_ros/launch/: bigpose.launch.py  rviz_bigpose.py
bigpose_ros/rviz/: debug.rviz
